--- a/maps/templates/counties.html
+++ b/maps/templates/counties.html
@@ -46,7 +46,7 @@
                 });
             }
 
-            $.getJSON("data/us-10m.json", function(data){
+            $.getJSON("data/us-2014-10m.json", function(data){
                 geoJsonObject = topojson.feature(data, data.objects.counties)
                 map.data.addGeoJson(geoJsonObject);
             });
@@ -60,7 +60,7 @@
             map.data.setStyle(featureStyle);
 
 map.data.addListener('mouseover', function(event) {
-    $("#info").text(event.feature.getProperty("COUNTY") + ', ' + event.feature.getProperty("STATE"));
+    $("#info").text(event.feature.getProperty("COUNTY") + ', ' + event.feature.getProperty("STATE") + ' : ' + event.feature.getId());
      map.data.overrideStyle(event.feature, {strokeWeight: 2, strokeOpacity: 1});
 });
 
