Add various property viewings for state and county.

--- a/maps/templates/base.html
+++ b/maps/templates/base.html
@@ -14,8 +14,10 @@
         <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?v=3.exp&key={{ googlekey }}">
         </script>
         <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
-        <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/topojson/1.1.0/topojson.min.js"></script>
 
+        <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/d3/3.4.11/d3.min.js"></script>
+        <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/topojson/1.1.0/topojson.min.js"></script>
+    
         {% block morehead %}{% endblock %}
     </head>
     <body>
