--- a/maps/templates/states.html
+++ b/maps/templates/states.html
@@ -91,8 +91,8 @@
                                     return {
                                         fillColor: colors(rescale(props[property])),
                                         fillOpacity: .5,
-                                        strokeOpacity: 0,
-                                        strokeWeight: 0
+                                        strokeOpacity: .1,
+                                        strokeWeight: 1
                                     };
                                 }
                             });
