Make way for unionX hashtag inclusion ratios.

--- a/maps/templates/counties.html
+++ b/maps/templates/counties.html
@@ -100,6 +100,10 @@
             <option value="tweeted_hashtags">Number of Tweeted Hashtags</option>
             <option value="distinct_hashtags">Number of Distinct Hashtags</option>
             <option value="top5000ratios">Included Ratio of Top 5000 Hashtags</option>
+            <option value="unionX70">Included Ratio of Union-70% Top Hashtags</option>
+            <option value="unionX80">Included Ratio of Union-80% Top Hashtags</option>
+            <option value="unionX90">Included Ratio of Union-90% Top Hashtags</option>
+ 
 {% endblock %}
 
 {% block body %}
