--- a/maps/templates/squares.html
+++ b/maps/templates/squares.html
@@ -99,6 +99,10 @@
             <option value="distinct_hashtags">Number of Distinct Hashtags</option>
             <!--<option value="users">Number of Users</option>-->
             <option value="top5000ratios">Included Ratio of Top 5000 Hashtags</option>
+            <option value="unionX70">Included Ratio of Union-70% Top Hashtags</option>
+            <option value="unionX80">Included Ratio of Union-80% Top Hashtags</option>
+            <option value="unionX90">Included Ratio of Union-90% Top Hashtags</option>
+
 {% endblock %}
 
 {% block body %}
