--- a/maps/templates/base.html
+++ b/maps/templates/base.html
@@ -35,6 +35,20 @@
         <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/topojson/1.1.0/topojson.min.js"></script>
 
         <script type="text/javascript">
+            
+        var urlParams;
+        (window.onpopstate = function () {
+            var match,
+                pl     = /\+/g,  // Regex for replacing addition symbol with a space
+                search = /([^&=]+)=?([^&]*)/g,
+                decode = function (s) { return decodeURIComponent(s.replace(pl, " ")); },
+                query  = window.location.search.substring(1);
+
+            urlParams = {};
+            while (match = search.exec(query))
+               urlParams[decode(match[1])] = decode(match[2]);
+        })();
+
         var property;
         var propertyInfo;
         var rescale;
@@ -43,7 +57,7 @@
         var grid;
         var domain;
         var info;
-        var cache = {};
+        var cache = {'none': {}};
 
         var populateAutoLimits = function() {
             var disable = false;
@@ -103,27 +117,48 @@
 
         var redraw = function() {
             updateColormap();
-            map.data.setStyle(function(feature) {
-                var id = feature.getId();
-                var val = propertyInfo[id];
-                if (typeof val === 'undefined') {
-                    return defaultFeatureStyle;
-                } else {
-                    if (isNaN(val)) {
-                        var c = '#FF0000';
+            var domain = colors.domain();
+            var min = domain[0];
+            var max = domain[domain.length-1];
+            if (property === "none") {
+                map.data.setStyle(defaultFeatureStyle);
+            } else {
+                map.data.setStyle(function(feature) {
+                    var id = feature.getId();
+                    var val = propertyInfo[id];
+                    var val_rescaled = rescale(val);
+                    if (typeof val === 'undefined') {
+                        return defaultFeatureStyle;
                     } else {
-                        var c = colors(rescale(val));
+                        if (isNaN(val)) {
+                            var c = '#FF0000';
+                        } else if (val_rescaled < min) {
+                            var c = '#FFFF00';
+                        } else if (val_rescaled > max) {
+                            var c = '#000000';
+                        } else {
+                            var c = colors(val_rescaled);
+                        }
+                        return {
+                            fillColor: c,
+                            fillOpacity: .8,
+                            strokeOpacity: .1,
+                            strokeWeight: 1
+                        };
                     }
-                    return {
-                        fillColor: c,
-                        fillOpacity: .5,
-                        strokeOpacity: .1,
-                        strokeWeight: 1
-                    };
-                }
-            });
+                });
+            }
         };
 
+        </script>
+
+        {% block morehead %}{% endblock %}
+        <script type="text/javascript">
+            $(document).ready(initialize);
+            //google.maps.event.addDomListener(window, 'load', initialize);
+        </script>
+
+        <script type="text/javascript">
         $(document).ready( function() {
 
                 //$("#options").buttonset();
@@ -176,13 +211,16 @@
         });
         </script>
  
-        {% block morehead %}{% endblock %}
     </head>
     <body>
     <div id="options">
     Property:
         <select id="property">
+            <option value="none">Boundries Only</option>
             {% block properties %}{% endblock %}
+            <option value="unionX70_Y100">Included Ratio of Union-70% Top Hashtags, Users >= 100</option>
+            <option value="unionX70_Y1000">Included Ratio of Union-70% Top Hashtags, Users >= 1000</option>
+            <option value="unionX70_Y5000">Included Ratio of Union-70% Top Hashtags, Users >= 5000</option>
         </select>
     <br>
     Color Scale:
