--- a/maps/templates/states.html
+++ b/maps/templates/states.html
@@ -2,19 +2,6 @@
 {% block morehead %}
         <script type="text/javascript">
 
-        var urlParams;
-        (window.onpopstate = function () {
-            var match,
-                pl     = /\+/g,  // Regex for replacing addition symbol with a space
-                search = /([^&=]+)=?([^&]*)/g,
-                decode = function (s) { return decodeURIComponent(s.replace(pl, " ")); },
-                query  = window.location.search.substring(1);
-
-            urlParams = {};
-            while (match = search.exec(query))
-               urlParams[decode(match[1])] = decode(match[2]);
-        })();
-
         var center;
         var initialLat;
         var initialLong;
@@ -89,7 +76,6 @@
 
         }
 
-      google.maps.event.addDomListener(window, 'load', initialize);
     </script>
 {% endblock %}
 
@@ -97,8 +83,11 @@
             <option value="respop72013">Resident Population 07/2013 (est)</option>
             <option value="landarea">Total Land Area</option>
             <option value="mle_entropy" selected>Entropy of Hashtag Distribution</option>
+            <option value="users">Number of Users</option>
             <option value="tweeted_hashtags">Number of Tweeted Hashtags</option>
             <option value="distinct_hashtags">Number of Distinct Hashtags</option>
+            <option value="countratio">Log(Tweeted Hashtags) / Log(Distinct Hashtags)</option>
+            <option value="low10_countratio">Ratio of Hashtags with less than 10 counts</option>
             <option value="top5000ratios">Included Ratio of Top 5000 Hashtags</option>
             <option value="unionX70">Included Ratio of Union-70% Top Hashtags</option>
             <option value="unionX80">Included Ratio of Union-80% Top Hashtags</option>
