Update html for low count plots restricted to unionX hashtags.

--- a/maps/templates/squares.html
+++ b/maps/templates/squares.html
@@ -86,6 +86,10 @@
             <option value="distinct_hashtags">Number of Distinct Hashtags</option>
             <option value="countratio">Log(Tweeted Hashtags) / Log(Distinct Hashtags)</option>
             <option value="low10_countratio">Ratio of Hashtags with less than 10 counts</option>
+            <option value="low2_countratio">Ratio of Hashtags with less than 2 counts</option>
+            <option value="low2_countratio_unionX70">Ratio of UnionX70 Hashtags with less than 2 counts</option>
+            <option value="low2_countratio_unionX80">Ratio of UnionX80 Hashtags with less than 2 counts</option>
+            <option value="low2_countratio_unionX90">Ratio of UnionX90 Hashtags with less than 2 counts</option>
             <option value="top5000ratios">Included Ratio of Top 5000 Hashtags</option>
             <option value="unionX70">Included Ratio of Union-70% Top Hashtags</option>
             <option value="unionX80">Included Ratio of Union-80% Top Hashtags</option>
