Add scripts for Fisher ranking of hashtags.

--- a/maps/templates/counties.html
+++ b/maps/templates/counties.html
@@ -96,6 +96,8 @@
             <option value="unionX70">Included Ratio of Union-70% Top Hashtags</option>
             <option value="unionX80">Included Ratio of Union-80% Top Hashtags</option>
             <option value="unionX90">Included Ratio of Union-90% Top Hashtags</option>
+            <option value="fisherscore100">Relative Fisher Scores (n=100)</option>
+            <option value="fisherscore200">Relative Fisher Scores (n=200)</option>
  
 {% endblock %}
 
